--- a/index.html
+++ b/index.html
@@ -14,16 +14,62 @@
             <p class="ph">I am Intiser Saiba. I am professional fulImagine you don't need a diet because we provide  healthy and delicious food for you!</p>
             <a class="link" target="blank" href="https://github.com/iuSaiba">Order Food</a>
         </div>
-       <div class="half">
-            <img src="food-network-main/images/female/Group 8425.png">
+        <div class="half">
+            <img src="food-network-main/images/female/Group 8425.jpg">
        </div>
     </section>
     <section class="banner flex">
         <div class="half">
             <img src="food-network-main/images/female/PersonImage.png" alt="">
         </div>
-        <div>
+        <div class="half">
             <h2>About Me</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                elit. Condimentum diam orci pretium a pharetra,
+                feugiat cursus. Dictumst risus, sem egestas odio cras
+                adipiscing vulputate. Nisi, risus in suscipit non. Non
+                commodo volutpat, pharetra, vel.
+            </p>
+            <a class="link" target="_blank" href="https://iusaiba.github.io/repo/">Contact me</a>
+        </div>
+        <div>
+            
+    </section>
+    <div class="hyy">
+        <h1>My recipies</h1>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.<br>
+        Lorem Ipsum has been the industry's standard dummy text ever since the<br>
+        1500s.</div>
+    </div>
+    <section class="flex">
+        <div class="last">
+            <img src="food-network-main/images/food/Project Cover1.jpg">
+            <h2>Recipie Title</h2>
+            <p>Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit. Lacus,
+            fermentum amet faucibus sed id nisi
+            lectus at.</p>
+        </div>
+        
+        <div class="last">
+            <img src="food-network-main/images/food/Project Cover.jpg">
+            <h2>Recipie Title</h2>
+            <p>Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit. Lacus,
+            fermentum amet faucibus sed id nisi
+            lectus at.</p>
+        </div>
+        <div class="last">
+            <img src="food-network-main/images/food/Project Cover.jpg">
+            <h2>Recipie Title</h2>
+            <p>Lorem ipsum dolor sit amet,
+                consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi
+                lectus at.</p>
+        </div>
+    </section>
+    <section>
+        <div class="fffoootttr">
 
         </div>
     </section>
