--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </section>
     <section class="banner flex">
         <div class="half">
-            <img src="food-network-main/images/female/PersonImage.png" alt="">
+            <img src="food-network-main/images/io.jpg" alt="">
         </div>
         <div class="half">
             <h2>About Me</h2>
@@ -30,7 +30,7 @@
                 adipiscing vulputate. Nisi, risus in suscipit non. Non
                 commodo volutpat, pharetra, vel.
             </p>
-            <a class="link" target="_blank" href="https://iusaiba.github.io/repo/">Contact me</a>
+            <a class="link" target="_blank" href="https://www.facebook.com/odhora.jinat">Contact me</a>
         </div>
         <div>
             
@@ -43,7 +43,7 @@
     </div>
     <section class="flex">
         <div class="last">
-            <img src="food-network-main/images/food/Project Cover1.jpg">
+            <img src="food-network-main/images/food/maxresdefault.jpg">
             <h2>Recipie Title</h2>
             <p>Lorem ipsum dolor sit amet,
             consectetur adipiscing elit. Lacus,
@@ -52,7 +52,7 @@
         </div>
         
         <div class="last">
-            <img src="food-network-main/images/food/Project Cover.jpg">
+            <img src="food-network-main/images/food/(HiFiMult.jpg">
             <h2>Recipie Title</h2>
             <p>Lorem ipsum dolor sit amet,
             consectetur adipiscing elit. Lacus,
@@ -60,7 +60,7 @@
             lectus at.</p>
         </div>
         <div class="last">
-            <img src="food-network-main/images/food/Project Cover.jpg">
+            <img src="food-network-main/images/food/unnamed.jpg">
             <h2>Recipie Title</h2>
             <p>Lorem ipsum dolor sit amet,
                 consectetur adipiscing elit. Lacus,
@@ -68,9 +68,18 @@
                 lectus at.</p>
         </div>
     </section>
-    <section>
-        <div class="fffoootttr">
-
+    <section class="fffoootttr">
+        <div class="ff">
+            <h1>700k</h1>
+            <p>Youtube Subscribers</p>
+        </div>
+        <div class="ff">
+            <h1>100k</h1>
+            <p>Facebook Followers</p>
+        </div>
+        <div class="ff">
+            <h1>2.4m</h1>
+            <p>Instagram Followers</p>
         </div>
     </section>
 </body>
