--- a/index.html
+++ b/index.html
@@ -82,5 +82,10 @@
             <p>Instagram Followers</p>
         </div>
     </section>
+    <section>
+        <div class="Footer">
+            <h1><span class="title">Rozi</span> Cooking Studio</h1>
+        </div>
+    </section>
 </body>
 </html>
