--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section class="flex">
         <div class="last">
             <img src="food-network-main/images/food/maxresdefault.jpg">
-            <h2>Recipie Title</h2>
+            <h2>Churros Recipie</h2>
             <p>Lorem ipsum dolor sit amet,
             consectetur adipiscing elit. Lacus,
             fermentum amet faucibus sed id nisi
@@ -53,7 +53,7 @@
         
         <div class="last">
             <img src="food-network-main/images/food/(HiFiMult.jpg">
-            <h2>Recipie Title</h2>
+            <h2>Chocolate Cake</h2>
             <p>Lorem ipsum dolor sit amet,
             consectetur adipiscing elit. Lacus,
             fermentum amet faucibus sed id nisi
@@ -61,30 +61,17 @@
         </div>
         <div class="last">
             <img src="food-network-main/images/food/unnamed.jpg">
-            <h2>Recipie Title</h2>
+            <h2>Vanilla Cake</h2>
             <p>Lorem ipsum dolor sit amet,
                 consectetur adipiscing elit. Lacus,
                 fermentum amet faucibus sed id nisi
                 lectus at.</p>
         </div>
     </section>
-    <section class="fffoootttr">
-        <div class="ff">
-            <h1>700k</h1>
-            <p>Youtube Subscribers</p>
-        </div>
-        <div class="ff">
-            <h1>100k</h1>
-            <p>Facebook Followers</p>
-        </div>
-        <div class="ff">
-            <h1>2.4m</h1>
-            <p>Instagram Followers</p>
-        </div>
-    </section>
-    <section>
+    <section> 
         <div class="Footer">
             <h1><span class="title">Rozi</span> Cooking Studio</h1>
+            <p class="title">Eat healthy to live healthy. Live healthy to live happy.</p>
         </div>
     </section>
 </body>
